# generative-pipelines

./: .editorconfig  .gitignore  README.md  justfile
.dev/: aspire-deploy.py  aspire-init.py  aspire-manifest.py  aspire-provision.py  build.ps1  build.sh  clean.sh  dev.ps1  dev.sh  start.ps1  start.sh  test-orchestrator.py  watch.sh
.github/: _typos.toml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yaml  config.yml
.github/workflows/: dockerize-chunker.yml  dockerize-embedding-generator.yml  dockerize-extractor.yml  dockerize-orchestrator.yml  dockerize-text-generator.yml  dockerize-typechat.yml  dockerize-vector-storage-sk.yml  dockerize-wikipedia.yml  dotnet-build.yml  spell-check.yml
docs/: CONTRIBUTING.md  CONVENTIONS.md  DEPLOYMENT.md  DEVELOPMENT.md  EXAMPLE-RAG-INGESTION.md  EXAMPLES.md  JMESPATH.md  PIPELINES-INTRO.md  QUICKSTART.md  REQUIREMENTS.md  SUPPORT.md
examples/: example.docx  example.docx.base64  quickstart.js  quickstart.py  test.docx  test.docx.base64  url-ingestion.yaml
infra/: Directory.Build.props  Directory.Packages.props
infra/Aspire.AppHost/: Aspire.AppHost.csproj  Program.cs  (+1 more)
service/: Directory.Build.props  Directory.Packages.props  gp.sln  gp.sln.DotSettings
tools/: README.md
tools/Wikipedia/: Dockerfile  clean.sh  dockerize.sh  pyproject.toml  start-docker-image.sh  start.sh
tools/Wikipedia/app/: main.py
tools/Wikipedia/app/libs/: tool_registry.py
tools/_examples/python/: pyproject.toml  start.sh
tools/_examples/python/app/: items_endpoint.py  main.py  models.py  status_endpoint.py  users_endpoint.py
(+355 files in other folders)
